Numerous tests focused on the key elements of the Scrapper

--- a/Src/Aps.Domain.Scrap.Tests/Aps.Domain.Scrap.Tests.csproj
+++ b/Src/Aps.Domain.Scrap.Tests/Aps.Domain.Scrap.Tests.csproj
@@ -67,6 +67,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Fixtures\ScrapeSessionResultCode_identity.Fixture.cs" />
+    <Compile Include="Fixtures\Scrape_Request_factory.Fixture.cs" />
+    <Compile Include="Scrape_Request_Factory.cs" />
     <Compile Include="DomainTypes\AccountIdStub.cs" />
     <Compile Include="DomainTypes\IScrapRequestRepository.cs" />
     <Compile Include="DomainTypes\ScrapeDataAudit.cs" />
@@ -82,6 +85,9 @@
     <Compile Include="DomainTypes\IScraperScriptParser.cs" />
     <Compile Include="ScrapeResultCodeTest.cs" />
     <Compile Include="ScrapResultDataPair_Data_Collection.cs" />
+    <Compile Include="Stubs\AccountIdStub.cs" />
+    <Compile Include="Stubs\ScrapeSessionResultCode_identity.cs" />
+    <Compile Include="Stubs\CompanyNameStub.cs" />
     <Compile Include="Stubs\ScrapSessionIdStub.cs" />
     <Compile Include="Stubs\ScrapeResultStub.cs" />
     <Compile Include="ScrapeRequestID_Identity.cs" />
