--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -59,6 +59,7 @@
     <Compile Include="AccountStatements\DataTypeConverters\DateDataTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\DurationTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\KilowattHourTypeConverter.cs" />
+    <Compile Include="AccountStatements\DataTypeConverters\MonthDataTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\PercentageTypeConverter.cs" />
     <Compile Include="AccountStatements\IDataTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\TextDataTypeConverter.cs" />
