Scraper improvements and tests

--- a/Src/Aps.Domain.Scrap.Tests/Aps.Domain.Scrap.Tests.csproj
+++ b/Src/Aps.Domain.Scrap.Tests/Aps.Domain.Scrap.Tests.csproj
@@ -67,12 +67,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ScrapeSessionResultCode_identity.cs" />
     <Compile Include="Fixtures\ScrapeSessionResultCode_identity.Fixture.cs" />
     <Compile Include="Fixtures\Scrape_Request_factory.Fixture.cs" />
     <Compile Include="Fixtures\ScrapeDataAudit_Identity.Fixture.cs" />
     <Compile Include="ScrapeDataAudit_Identity.cs" />
     <Compile Include="Scrape_Request_Factory.cs" />
-    <Compile Include="DomainTypes\AccountIdStub.cs" />
     <Compile Include="DomainTypes\IScrapRequestRepository.cs" />
     <Compile Include="DomainTypes\ScrapeDataAudit.cs" />
     <Compile Include="DomainTypes\ScrapeRequest.cs" />
@@ -87,7 +87,6 @@
     <Compile Include="DomainTypes\IScraperScriptParser.cs" />
     <Compile Include="ScrapResultDataPair_Data_Collection.cs" />
     <Compile Include="Stubs\AccountIdStub.cs" />
-    <Compile Include="Stubs\ScrapeSessionResultCode_identity.cs" />
     <Compile Include="Stubs\CompanyNameStub.cs" />
     <Compile Include="Stubs\ScrapSessionIdStub.cs" />
     <Compile Include="Stubs\ScrapeResultStub.cs" />
