Test for name and surname

--- a/Src/Aps.Domain.Customer.Tests/Aps.Domain.Customer.Tests.csproj
+++ b/Src/Aps.Domain.Customer.Tests/Aps.Domain.Customer.Tests.csproj
@@ -61,11 +61,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Ccv_Number.cs" />
     <Compile Include="Credit_card_number.cs" />
-    <Compile Include="CustomerRegistrationAPS2.cs" />
-    <Compile Include="CustomerRegistrationAPS1.cs" />
+    <Compile Include="CustomerRegistrationAPS.cs" />
     <Compile Include="Fixtures\Ccv_Number.Fixture.cs" />
     <Compile Include="Fixtures\Credit_card_number.Fixture.cs" />
+    <Compile Include="Fixtures\CustomerRegistrationAPS.Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
