--- a/Src/Aps.Domain.Customer.Tests/Aps.Domain.Customer.Tests.csproj
+++ b/Src/Aps.Domain.Customer.Tests/Aps.Domain.Customer.Tests.csproj
@@ -67,7 +67,9 @@
     <Compile Include="Fixtures\Ccv_Number.Fixture.cs" />
     <Compile Include="Fixtures\Credit_card_number.Fixture.cs" />
     <Compile Include="Fixtures\CustomerRegistrationAPS.Fixture.cs" />
+    <Compile Include="Fixtures\TelephoneNumber.Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TelephoneNumber.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
