--- a/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
+++ b/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Fixtures\Company_Identity.Fixture.cs" />
     <Compile Include="Fixtures\Company_name.Fixture.cs" />
     <Compile Include="Fixtures\Company_type_identity.Fixture.cs" />
+    <Compile Include="Fixtures\Scraper_script_create.Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CompanyName_Identity.cs" />
     <Compile Include="Company_Identity.cs" />
@@ -86,6 +87,8 @@
     <Compile Include="Stubs\CompanyTypeStub.cs" />
     <Compile Include="Stubs\ScraperScriptStub.cs" />
     <Compile Include="Company_type_identity.cs" />
+    <Compile Include="Scraper_script_create.cs" />
+    <Compile Include="Scraper_script_identity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
