--- a/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
+++ b/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Fixtures\Company_name.Fixture.cs" />
     <Compile Include="Fixtures\Company_type_identity.Fixture.cs" />
     <Compile Include="Fixtures\Scraper_script_create.Fixture.cs" />
+    <Compile Include="Fixtures\Scraper_script_identity.Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CompanyName_Identity.cs" />
     <Compile Include="Company_Identity.cs" />
