added data integrity check test

--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -57,13 +57,15 @@
     <Compile Include="AccountStatements\AccountStatmentEntry.cs" />
     <Compile Include="AccountStatements\AccountStatmentEntryFactory.cs" />
     <Compile Include="AccountStatements\AccountStatmentEntryId.cs" />
-    <Compile Include="AccountStatements\DataIntegrityCheckFailedException.cs" />
+    <Compile Include="AccountStatements\DataIntegrityChecks\DataIntegrityCheckFailedException.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\BalanceDataTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\DateDataTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\DurationTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\KilowattHourTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\MonthDataTypeConverter.cs" />
     <Compile Include="AccountStatements\DataTypeConverters\PercentageTypeConverter.cs" />
+    <Compile Include="AccountStatements\DataIntegrityChecks\AdditionIntegrityCheck.cs" />
+    <Compile Include="AccountStatements\DataIntegrityChecks\DataIntegrityCheckBase.cs" />
     <Compile Include="AccountStatements\IDataIntegrityCheck.cs" />
     <Compile Include="Company\IDataIntegrityCheckOverride.cs" />
     <Compile Include="AccountStatements\IDataTypeConverter.cs" />
@@ -130,7 +132,6 @@
     <Compile Include="Validator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="AccountStatements\DataIntegrityChecks\" />
     <Folder Include="Account\" />
   </ItemGroup>
   <ItemGroup>
