Added  Inteface tests

--- a/Src/Aps.Domain.Customer.Tests/App.config
+++ b/Src/Aps.Domain.Customer.Tests/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="lightbdd" type="LightBDD.Configuration.LightBDDConfiguration, LightBDD"/>
@@ -9,4 +9,4 @@
       <add formatter="LightBDD.Results.Formatters.HtmlResultFormatter, LightBDD" output="../../../../TestReports/Customer.Tests.html"/>
     </summaryWriters>
   </lightbdd>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup></configuration>
