--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -83,10 +83,11 @@
     <Compile Include="Common\DataType.cs" />
     <Compile Include="Company\AccountStatmentEntryMapping.cs" />
     <Compile Include="Company\CompanyName.cs" />
+    <Compile Include="Credential\AccountNumber.cs" />
     <Compile Include="Credential\CcvNumber.cs" />
     <Compile Include="Credential\NameVO.cs" />
     <Compile Include="Credential\SurnameVO.cs" />
-    <Compile Include="Credential\TelePhoneNumber.cs" />
+    <Compile Include="Credential\TelephoneNumber.cs" />
     <Compile Include="DefaultFormatProviderSettings.cs" />
     <Compile Include="Common\Money.cs" />
     <Compile Include="Common\NumericValue.cs" />
