--- a/Src/Aps.Domain.Account/Aps.Domain.Account.Tests.csproj
+++ b/Src/Aps.Domain.Account/Aps.Domain.Account.Tests.csproj
@@ -61,6 +61,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AccountNumber_identity.cs" />
+    <Compile Include="Fixtures\AccountNumber_identity.Fixture.cs" />
+    <Compile Include="Fixtures\Telephone_identity.Fixture.cs" />
+    <Compile Include="PinNumber_identity.cs" />
+    <Compile Include="SecurityCode_identity.cs" />
+    <Compile Include="TelephoneNumber_identity.cs" />
+    <Compile Include="UserName_identity.cs" />
     <Compile Include="Password_identity.cs" />
     <Compile Include="EmailAddress_identity.cs" />
     <Compile Include="CreditCardNumber_identity.cs" />
@@ -78,7 +85,6 @@
     <Compile Include="Fixtures\Account_identity.Fixture.cs" />
     <Compile Include="DomainTypes\Account.cs" />
     <Compile Include="DomainTypes\AccountId.cs" />
-    <Compile Include="DomainTypes\AccountNumber.cs" />
     <Compile Include="DomainTypes\AccountStatus.cs" />
     <Compile Include="Stubs\CustomerIdStub.cs" />
     <Compile Include="Stubs\CompanyNameStub.cs" />
