Account Test Changes and Additions
Naming Changes to Account Tests for equality tests
Added Account Activation Tests

--- a/Src/Aps.Domain.Account/Aps.Domain.Account.Tests.csproj
+++ b/Src/Aps.Domain.Account/Aps.Domain.Account.Tests.csproj
@@ -61,28 +61,36 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="AccountNumber_identity.cs" />
-    <Compile Include="Fixtures\AccountNumber_identity.Fixture.cs" />
-    <Compile Include="Fixtures\Telephone_identity.Fixture.cs" />
-    <Compile Include="PinNumber_identity.cs" />
-    <Compile Include="SecurityCode_identity.cs" />
-    <Compile Include="TelephoneNumber_identity.cs" />
-    <Compile Include="UserName_identity.cs" />
-    <Compile Include="Password_identity.cs" />
-    <Compile Include="EmailAddress_identity.cs" />
-    <Compile Include="CreditCardNumber_identity.cs" />
-    <Compile Include="DateOfBirth_identity.cs" />
-    <Compile Include="AccountStatus_identity.cs" />
-    <Compile Include="Account_identity.cs" />
-    <Compile Include="Fixtures\CreditCardNumber_identity.Fixture.cs" />
-    <Compile Include="Fixtures\Password_identity.Fixture.cs" />
-    <Compile Include="Fixtures\PinNumber_identity.Fixture.cs" />
-    <Compile Include="Fixtures\SecurityCode_identity.Fixture.cs" />
-    <Compile Include="Fixtures\EmailAddress_identity.Fixture.cs" />
-    <Compile Include="Fixtures\UserName_identity.Fixture.cs" />
-    <Compile Include="Fixtures\DateOfBirth_identity.Fixture.cs" />
-    <Compile Include="Fixtures\AccountStatus_identity.Fixture.cs" />
-    <Compile Include="Fixtures\Account_identity.Fixture.cs" />
+    <Compile Include="Account_activation.cs" />
+    <Compile Include="AccountNumber_equality.cs" />
+    <Compile Include="DomainTypes\Credentials.cs" />
+    <Compile Include="DomainTypes\AccountRepository.cs" />
+    <Compile Include="DomainTypes\AccountFactory.cs" />
+    <Compile Include="DomainTypes\IAccount.cs" />
+    <Compile Include="DomainTypes\ICredentials.cs" />
+    <Compile Include="DomainTypes\myScraper.cs" />
+    <Compile Include="Fixtures\Account_activation.Fixture.cs" />
+    <Compile Include="Fixtures\AccountNumber_equality.Fixture.cs" />
+    <Compile Include="Fixtures\TelephoneNumber_equality.Fixture.cs" />
+    <Compile Include="PinNumber_equality.cs" />
+    <Compile Include="SecurityCode_equality.cs" />
+    <Compile Include="TelephoneNumber_equality.cs" />
+    <Compile Include="UserName_equality.cs" />
+    <Compile Include="Password_equality.cs" />
+    <Compile Include="EmailAddress_equality.cs" />
+    <Compile Include="CreditCardNumber_equality.cs" />
+    <Compile Include="DateOfBirth_equality.cs" />
+    <Compile Include="AccountStatus_equality.cs" />
+    <Compile Include="AccountId_identity.cs" />
+    <Compile Include="Fixtures\CreditCardNumber_equality.Fixture.cs" />
+    <Compile Include="Fixtures\Password_equality.Fixture.cs" />
+    <Compile Include="Fixtures\PinNumber_equality.Fixture.cs" />
+    <Compile Include="Fixtures\SecurityCode_equality.Fixture.cs" />
+    <Compile Include="Fixtures\EmailAddress_equality.Fixture.cs" />
+    <Compile Include="Fixtures\UserName_equality.Fixture.cs" />
+    <Compile Include="Fixtures\DateOfBirth_equality.Fixture.cs" />
+    <Compile Include="Fixtures\AccountStatus_equality.Fixture.cs" />
+    <Compile Include="Fixtures\AccountId_identity.Fixture.cs" />
     <Compile Include="DomainTypes\Account.cs" />
     <Compile Include="DomainTypes\AccountId.cs" />
     <Compile Include="DomainTypes\AccountStatus.cs" />
