--- a/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
+++ b/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
@@ -88,10 +88,6 @@
     <Compile Include="Company_Identity.cs" />
     <Compile Include="Company_factory.cs" />
     <Compile Include="Company_name.cs" />
-    <Compile Include="Stubs\BaseUrlStub.cs" />
-    <Compile Include="Stubs\BillingCycleStub.cs" />
-    <Compile Include="Stubs\CompanyTypeStub.cs" />
-    <Compile Include="Stubs\ScraperScriptStub.cs" />
     <Compile Include="Company_type_identity.cs" />
     <Compile Include="Scraper_script_create.cs" />
     <Compile Include="Scraper_script_identity.cs" />
@@ -108,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DataIntegrityChecks\" />
+    <Folder Include="Stubs\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
