Busy adding billing cycle creation tests and equality tests. Also changed the way in which the number of days per billing cycle is created. Now needs a CycleMethod being Monthly or Annually which changes the valid number of days from a mx of 28 for monthly to a max of 365 for annually

--- a/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
+++ b/Src/Aps.Domain.Company.Tests/Aps.Domain.Company.Tests.csproj
@@ -78,6 +78,7 @@
     <Compile Include="DomainTypes\ScraperScript.cs" />
     <Compile Include="Fixtures\BaseUrl_create.Fixture.cs" />
     <Compile Include="Fixtures\BaseUrl_Identity.Fixture.cs" />
+    <Compile Include="Fixtures\Billing_cycle_create.Fixture.cs" />
     <Compile Include="Fixtures\CompanyFactory.Fixture.cs" />
     <Compile Include="Fixtures\CompanyName_Identity.Fixture.cs" />
     <Compile Include="Fixtures\Company_Identity.Fixture.cs" />
@@ -95,6 +96,8 @@
     <Compile Include="Scraper_script_identity.cs" />
     <Compile Include="BaseUrl_Identity.cs" />
     <Compile Include="BaseUrl_create.cs" />
+    <Compile Include="Billing_cycle_create.cs" />
+    <Compile Include="Billing_cycle_identity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
