added account statement services

--- a/Src/Aps.Domain.Services/Aps.Domain.Services.csproj
+++ b/Src/Aps.Domain.Services/Aps.Domain.Services.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountStatementServices\AccountStatmentCreationService.cs" />
+    <Compile Include="AccountStatementServices\AccountStatmentDisplayService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -47,6 +49,7 @@
       <Name>Aps.Domain</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
