--- a/Src/Aps.Domain/Aps.Domain.csproj
+++ b/Src/Aps.Domain/Aps.Domain.csproj
@@ -51,38 +51,41 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountStatements\AccountStatement.cs" />
-    <Compile Include="AccountStatements\AccountStatementEntryDisplayValue.cs" />
+    <Compile Include="AccountStatements\StatementEntryDisplayValue.cs" />
     <Compile Include="AccountStatements\AccountStatementFactory.cs" />
     <Compile Include="AccountStatements\AccountStatementId.cs" />
-    <Compile Include="AccountStatements\AccountStatmentEntry.cs" />
-    <Compile Include="AccountStatements\AccountStatmentEntryFactory.cs" />
-    <Compile Include="AccountStatements\AccountStatmentEntryId.cs" />
-    <Compile Include="AccountStatements\DataIntegrityChecks\DataIntegrityCheckFailedException.cs" />
-    <Compile Include="AccountStatements\DataTypeConverters\BalanceDataTypeConverter.cs" />
-    <Compile Include="AccountStatements\DataTypeConverters\DateDataTypeConverter.cs" />
-    <Compile Include="AccountStatements\DataTypeConverters\DurationTypeConverter.cs" />
-    <Compile Include="AccountStatements\DataTypeConverters\KilowattHourTypeConverter.cs" />
-    <Compile Include="AccountStatements\DataTypeConverters\MonthDataTypeConverter.cs" />
-    <Compile Include="AccountStatements\DataTypeConverters\PercentageTypeConverter.cs" />
-    <Compile Include="AccountStatements\DataIntegrityChecks\AdditionIntegrityCheck.cs" />
-    <Compile Include="AccountStatements\DataIntegrityChecks\DataIntegrityCheckBase.cs" />
+    <Compile Include="AccountStatements\StatmentEntry.cs" />
+    <Compile Include="AccountStatements\StatmentEntryFactory.cs" />
+    <Compile Include="AccountStatements\StatmentEntryId.cs" />
+    <Compile Include="AccountStatements\StatmentEntryType.cs" />
+    <Compile Include="AccountStatements\AccountStatementIntegrityChecks\AdditionIntegrityCheck.cs" />
+    <Compile Include="AccountStatements\AccountStatementIntegrityChecks\DataIntegrityCheckBase.cs" />
+    <Compile Include="AccountStatements\AccountStatementIntegrityChecks\DataIntegrityCheckFailedException.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataType.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataConverters\BalanceDataTypeConverter.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataConverters\DateDataTypeConverter.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataConverters\DurationTypeConverter.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataConverters\KilowattHourTypeConverter.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataConverters\MonthDataTypeConverter.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataConverters\PercentageTypeConverter.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataConverters\TextDataTypeConverter.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypes\Balance.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypes\CalendarMonth.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypes\Date.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypes\Duration.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypes\KilowattHour.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypes\Money.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypes\Month.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypes\NumericValue.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypes\Percentage.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypes\TextValue.cs" />
+    <Compile Include="AccountStatements\IAccountStatementEntryData.cs" />
+    <Compile Include="AccountStatements\IAccountStatementRepository.cs" />
     <Compile Include="AccountStatements\IAccountStatmentDisplayAdapter.cs" />
     <Compile Include="AccountStatements\IDataIntegrityCheck.cs" />
-    <Compile Include="AccountStatements\IAccountStatementEntryData.cs" />
-    <Compile Include="Company\IDataIntegrityCheckOverride.cs" />
     <Compile Include="AccountStatements\IDataTypeConverter.cs" />
-    <Compile Include="AccountStatements\DataTypeConverters\TextDataTypeConverter.cs" />
-    <Compile Include="Common\CalendarMonth.cs" />
-    <Compile Include="Common\Duration.cs" />
-    <Compile Include="Common\KilowattHour.cs" />
-    <Compile Include="Common\Month.cs" />
-    <Compile Include="Common\Percentage.cs" />
-    <Compile Include="Common\TextValue.cs" />
-    <Compile Include="Common\Balance.cs" />
-    <Compile Include="Common\Date.cs" />
-    <Compile Include="AccountStatements\IAccountStatementRepository.cs" />
-    <Compile Include="Common\AccountStatmentEntryType.cs" />
-    <Compile Include="Common\DataType.cs" />
+    <Compile Include="AccountStatements\StatementEntryDataTypeAttribute.cs" />
+    <Compile Include="Company\IDataIntegrityCheckOverride.cs" />
     <Compile Include="Company\AccountStatmentEntryMapping.cs" />
     <Compile Include="Company\CompanyName.cs" />
     <Compile Include="Credential\AccountNumber.cs" />
@@ -91,10 +94,7 @@
     <Compile Include="Credential\SurnameVO.cs" />
     <Compile Include="Credential\TelephoneNumber.cs" />
     <Compile Include="DefaultFormatProviderSettings.cs" />
-    <Compile Include="Common\Money.cs" />
-    <Compile Include="Common\NumericValue.cs" />
     <Compile Include="Common\Encryption.cs" />
-    <Compile Include="Common\StatementEntryDataTypeAttribute.cs" />
     <Compile Include="Credential\Password.cs" />
     <Compile Include="Credential\SecurityCode.cs" />
     <Compile Include="Credential\PinNumber.cs" />
