--- a/Src/APS.Domain.Services.Tests/APS.Domain.Services.Tests.csproj
+++ b/Src/APS.Domain.Services.Tests/APS.Domain.Services.Tests.csproj
@@ -62,9 +62,6 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Fxitures\Pipeline_modules.Fixture.cs" />
-    <Compile Include="DomainTypes\IPipelineModule.cs" />
-    <Compile Include="DomainTypes\Pipeline.cs" />
-    <Compile Include="DomainTypes\PipelineFactory.cs" />
     <Compile Include="Stubs\TestPipelineModule1.cs" />
     <Compile Include="Stubs\TestPipelineModule2.cs" />
     <Compile Include="Stubs\TestContext.cs" />
@@ -72,6 +69,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Aps.Domain.Services\Aps.Domain.Services.csproj">
+      <Project>{E07977A9-FE2C-473C-A6DC-E0FD341D1B24}</Project>
+      <Name>Aps.Domain.Services</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Aps.Domain\Aps.Domain.csproj">
       <Project>{B29B12BB-0520-40B9-B9F4-34A978D517DB}</Project>
       <Name>Aps.Domain</Name>
