--- a/Src/APS.Domain.Services.Tests/packages.config
+++ b/Src/APS.Domain.Services.Tests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="LightBDD.Core" version="1.7.1.0" targetFramework="net45" />
   <package id="LightBDD.MsTest" version="1.7.1.0" targetFramework="net45" />
+  <package id="Moq" version="4.5.10" targetFramework="net45" />
   <package id="Shouldly" version="2.7.0" targetFramework="net45" />
 </packages>
